        root@root FATAL:  password authentication failed for user "root"
        root@root DETAIL:  Role "root" does not exist.
If no username option is set, monit will keep using the hardcoded credentials (for backward compatibility).

Fixed: Issue #991: MacOS: Monit didn't compile on MacOS 10.13 or older, as
mount flags that were added in Monit 5.28.1 were not defined. Thanks to Lutz
Mader.


Version 5.28.1

Fixed: Issue #960: The memory usage may report wrong value if system memory size changes after Monit start. The problem
was frequent on KVM/LXC containers where MemTotal is dynamicaly updated.

Fixed: Issue #965: If you run monit CLI with custom configuration file, via the -c option, and the file cannot be read
by monit, AssertException was thrown. Monit will report normal error instead of the exception now.

Fixed: Issue #966: Service name pattern for CLI commands was case-sensitive in 5.28.0.

Fixed: Issue #968: The systemd and upstart templates used to set the path to the configuration file in the sysconfdir,
which is optionally set during the compilation. That path wasn't fully expanded. The template now doesn't specify the
explicit path and lets monit search for the configuration file in all supported locations (including the sysconfdir).

Fixed: Issue #971: The optional "ELSE" part of the "IF LINK UP THEN <action> ELSE IF FAILED THEN <action>" and
"IF LINK DOWN THEN <action> ELSE IF SUCCEDED THEN <action>".

Fixed: Issue #976: If the space free test recovered, it did always report percent free, regadless of the test unit.
If absolute bytes limit is set, Monit will report absolute bytes value of current space free as well.

Fixed: Issue #986: Services with custom check schedule did set the data collection timestamp even if the monitoring was
skipped in the given cycle. The timestamp is now updated only when the check was performed.

Fixed: Issue #990: Monit built with libressl may crash during verification of expired certificate.
